2009-01-05  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/Makefile.in, modules/dbus/Makefile.in:
	* modules/dirkey/Makefile.in, modules/fastcgi/Makefile.in:
	* modules/gdbm/Makefile.in, modules/gtk2/Makefile.in:
	* modules/i18n/Makefile.in, modules/libsvm/Makefile:
	* modules/matlab/Makefile, modules/netica/Makefile:
	* modules/oracle/Makefile.in, modules/pari/Makefile.in:
	* modules/pcre/Makefile.in, modules/postgresql/Makefile.in:
	* modules/queens/Makefile, modules/rawsock/Makefile.in:
	* modules/readline/Makefile.in, modules/regexp/Makefile.in:
	* modules/syscalls/Makefile.in, modules/wildcard/Makefile.in:
	* modules/zlib/Makefile.in: restore buildability by a
	system-wide clisp, removing all external dependencies,
	speficically, $(INCLUDES)/clisp.h and modprep
	(INCLUDES): init to $(shell $(CLISP) -x '(namestring *lib-directory*)')/linkkit
	(MODPREP): remove; use $(INCLUDES)/modprep instead;
	$(INCLUDES)/clisp.h and modprep
	* makemake.in (anymodule): depend on linkkit instead of explicit files

2009-01-05  Sam Steingold  <sds@gnu.org>

	* modules/dbus/dbus.lisp, modules/postgresql/postgresql.lisp:
	* modules/readline/readline.lisp: include the local "config.h",
	not the global <config.h>

2009-01-05  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (compile-file): when writing a C file, remove it
	on failure too, just like we already remove LIB and FAS files

2009-01-05  Sam Steingold  <sds@gnu.org>

	* room.lisp (room): report GC time in seconds, not internal time units

2009-01-05  Sam Steingold  <sds@gnu.org>

	* control.d (compile_eval_form): aktenv_to_stack may trigger GC
	Reported by Vladimir Tzankov.

2008-12-30  Sam Steingold  <sds@gnu.org>

	Declaration (COMPILE) accepts name argument;
	this fixes bug #[ 2477736 ]: poor error messages from GF funcalls
	* eval.d (parse_dd): return compile name, not just a boolean
	(get_closure): use parse_dd return value over :LAMBDA
	* control.d (parse_doc_decl): ditto