@@ -1,5 +1,12 @@
 2009-01-05  Sam Steingold  <sds@gnu.org>
 
+	* makemake.in (clean0): do not remove linkkit here
+	(clean1): remove it here, together with boot/base/full
+	(clean-modules): new target, extracted from clean7
+	(clean7): depend on clean-modules
+
+2009-01-05  Sam Steingold  <sds@gnu.org>
+
 	* modules/berkeley-db/Makefile.in, modules/dbus/Makefile.in:
 	* modules/dirkey/Makefile.in, modules/fastcgi/Makefile.in:
 	* modules/gdbm/Makefile.in, modules/gtk2/Makefile.in:
@@ -12,7 +19,7 @@
 	* modules/syscalls/Makefile.in, modules/wildcard/Makefile.in:
 	* modules/zlib/Makefile.in: restore buildability by a
 	system-wide clisp, removing all external dependencies,
-	speficically, $(INCLUDES)/clisp.h and modprep
+	specifically, $(INCLUDES)/clisp.h and modprep
 	(INCLUDES): init to $(shell $(CLISP) -x '(namestring *lib-directory*)')/linkkit
 	(MODPREP): remove; use $(INCLUDES)/modprep instead;
 	$(INCLUDES)/clisp.h and modprep
